precompiles/utils/macro/tests/compile-fail/precompile/test-gen/generic-arg.stderr
error[E0412]: cannot find type `R` in this scope
  --> tests/compile-fail/precompile/test-gen/generic-arg.rs:28:63
   |
28 |     fn foo(handle: &mut impl PrecompileHandle, arg: BoundedBytes<R>) -> EvmResult {
   |                                                                  ^ not found in this scope
   |
help: you might be missing a type parameter
   |
26 | impl<R: Get<u32>> Precompile<R><R> {
   |                             +++
